add aggregated files and adapt empire

--- a/aggregate-values.ipynb
+++ b/aggregate-values.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "[43824 rows x 39 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,15 +388,15 @@
     "\n",
     "# Based on Stian paper\n",
     "north = [\"DK\", \"FI\", \"SE\", \"NO1\", \"NO2\", \"NO3\", \"NO4\", \"NO5\", \"GB\", \"IE\", \"EE\", \"LV\", \"LT\"]\n",
-    "west = [\"BE\", \"ES\", \"FR\", \"LU\", \"NL\", \"PT\", \"IT\"]\n",
-    "east = [\"AT\", \"BG\", \"CH\", \"CZ\", \"DE\", \"GR\", \"HR\", \"HU\", \"MK\", \"PL\", \"RO\", \"RS\", \"SI\", \"SK\", \"BA\"]\n",
+    "west = [\"BE\", \"ES\", \"FR\", \"CH\", \"NL\", \"PT\", \"IT\"]\n",
+    "east = [\"AT\", \"BG\", \"LU\", \"CZ\", \"DE\", \"GR\", \"HR\", \"HU\", \"MK\", \"PL\", \"RO\", \"RS\", \"SI\", \"SK\", \"BA\"]\n",
     "\n",
     "df_load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -437,8 +437,8 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>74997.89833</td>\n",
-       "      <td>143189.0800</td>\n",
-       "      <td>110200.280000</td>\n",
+       "      <td>150417.2000</td>\n",
+       "      <td>102972.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -447,8 +447,8 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>74065.07333</td>\n",
-       "      <td>137656.9225</td>\n",
-       "      <td>106165.995000</td>\n",
+       "      <td>144913.8125</td>\n",
+       "      <td>98909.105000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -457,8 +457,8 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>70456.97667</td>\n",
-       "      <td>130323.3025</td>\n",
-       "      <td>102822.265000</td>\n",
+       "      <td>137344.7425</td>\n",
+       "      <td>95800.825000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -467,8 +467,8 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>68705.88000</td>\n",
-       "      <td>125446.3500</td>\n",
-       "      <td>101996.370000</td>\n",
+       "      <td>132415.1700</td>\n",
+       "      <td>95027.550000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -477,8 +477,8 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>68003.73167</td>\n",
-       "      <td>124451.0875</td>\n",
-       "      <td>102309.280000</td>\n",
+       "      <td>131099.4175</td>\n",
+       "      <td>95660.950000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -497,8 +497,8 @@
        "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>95015.29000</td>\n",
-       "      <td>153271.0900</td>\n",
-       "      <td>123693.138333</td>\n",
+       "      <td>159746.4625</td>\n",
+       "      <td>117217.765833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43820</th>\n",
@@ -507,8 +507,8 @@
        "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>91124.51667</td>\n",
-       "      <td>144762.8750</td>\n",
-       "      <td>118442.820833</td>\n",
+       "      <td>151009.1975</td>\n",
+       "      <td>112196.498333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43821</th>\n",
@@ -517,8 +517,8 @@
        "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>87112.68833</td>\n",
-       "      <td>141415.6725</td>\n",
-       "      <td>116295.425833</td>\n",
+       "      <td>147458.2375</td>\n",
+       "      <td>110252.860833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43822</th>\n",
@@ -527,8 +527,8 @@
        "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>81783.57167</td>\n",
-       "      <td>140345.5200</td>\n",
-       "      <td>112557.974167</td>\n",
+       "      <td>146397.9125</td>\n",
+       "      <td>106505.581667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43823</th>\n",
@@ -537,8 +537,8 @@
        "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>80558.02000</td>\n",
-       "      <td>136067.8250</td>\n",
-       "      <td>109072.420833</td>\n",
+       "      <td>142568.7025</td>\n",
+       "      <td>102571.543333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -547,35 +547,35 @@
       ],
       "text/plain": [
        "                   time  hour  dayofweek  month        north         west  \\\n",
-       "0      01/01/2015 00:00     0          3      1  74997.89833  143189.0800   \n",
-       "1      01/01/2015 01:00     1          3      1  74065.07333  137656.9225   \n",
-       "2      01/01/2015 02:00     2          3      1  70456.97667  130323.3025   \n",
-       "3      01/01/2015 03:00     3          3      1  68705.88000  125446.3500   \n",
-       "4      01/01/2015 04:00     4          3      1  68003.73167  124451.0875   \n",
+       "0      01/01/2015 00:00     0          3      1  74997.89833  150417.2000   \n",
+       "1      01/01/2015 01:00     1          3      1  74065.07333  144913.8125   \n",
+       "2      01/01/2015 02:00     2          3      1  70456.97667  137344.7425   \n",
+       "3      01/01/2015 03:00     3          3      1  68705.88000  132415.1700   \n",
+       "4      01/01/2015 04:00     4          3      1  68003.73167  131099.4175   \n",
        "...                 ...   ...        ...    ...          ...          ...   \n",
-       "43819  31/12/2019 19:00    19          1     12  95015.29000  153271.0900   \n",
-       "43820  31/12/2019 20:00    20          1     12  91124.51667  144762.8750   \n",
-       "43821  31/12/2019 21:00    21          1     12  87112.68833  141415.6725   \n",
-       "43822  31/12/2019 22:00    22          1     12  81783.57167  140345.5200   \n",
-       "43823  31/12/2019 23:00    23          1     12  80558.02000  136067.8250   \n",
+       "43819  31/12/2019 19:00    19          1     12  95015.29000  159746.4625   \n",
+       "43820  31/12/2019 20:00    20          1     12  91124.51667  151009.1975   \n",
+       "43821  31/12/2019 21:00    21          1     12  87112.68833  147458.2375   \n",
+       "43822  31/12/2019 22:00    22          1     12  81783.57167  146397.9125   \n",
+       "43823  31/12/2019 23:00    23          1     12  80558.02000  142568.7025   \n",
        "\n",
        "                east  \n",
-       "0      110200.280000  \n",
-       "1      106165.995000  \n",
-       "2      102822.265000  \n",
-       "3      101996.370000  \n",
-       "4      102309.280000  \n",
+       "0      102972.160000  \n",
+       "1       98909.105000  \n",
+       "2       95800.825000  \n",
+       "3       95027.550000  \n",
+       "4       95660.950000  \n",
        "...              ...  \n",
-       "43819  123693.138333  \n",
-       "43820  118442.820833  \n",
-       "43821  116295.425833  \n",
-       "43822  112557.974167  \n",
-       "43823  109072.420833  \n",
+       "43819  117217.765833  \n",
+       "43820  112196.498333  \n",
+       "43821  110252.860833  \n",
+       "43822  106505.581667  \n",
+       "43823  102571.543333  \n",
        "\n",
        "[43824 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
