test europe_v51 version copula-strata

--- a/Other/aggregate_values.ipynb
+++ b/Other/aggregate_values.ipynb
@@ -16,9 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes aggregated: 35\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -376,7 +383,7 @@
        "[43824 rows x 39 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +391,14 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "df_load = pd.read_csv(\"copula_testing/scenario_data/electricload.csv\")\n",
+    "df_load = pd.read_csv(\"../CopulaTesting/scenario_data/electricload.csv\")\n",
     "\n",
     "# Based on Stian paper\n",
     "north = [\"DK\", \"FI\", \"SE\", \"NO1\", \"NO2\", \"NO3\", \"NO4\", \"NO5\", \"GB\", \"IE\", \"EE\", \"LV\", \"LT\"]\n",
     "west = [\"BE\", \"ES\", \"FR\", \"CH\", \"NL\", \"PT\", \"IT\"]\n",
     "east = [\"AT\", \"BG\", \"LU\", \"CZ\", \"DE\", \"GR\", \"HR\", \"HU\", \"MK\", \"PL\", \"RO\", \"RS\", \"SI\", \"SK\", \"BA\"]\n",
+    "\n",
+    "print(f\"Number of nodes aggregated: {len(north) + len(west) + len(east)}\")\n",
     "\n",
     "df_load"
    ]
@@ -594,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_load.to_csv(\"copula_testing/scenario_data_agg/electricload.csv\")"
+    "df_load.to_csv(\"CopulaTesting/scenario_data_agg/electricload.csv\")"
    ]
   },
   {
@@ -617,14 +626,14 @@
     "renewable_sources = [\"windonshore\", \"solar\", \"windoffshore\", \"hydroror\", \"hydroseasonal\"]\n",
     "\n",
     "for rs in renewable_sources:\n",
-    "    _df = pd.read_csv(f\"copula_testing/scenario_data/{rs}.csv\")\n",
+    "    _df = pd.read_csv(f\"CopulaTesting/scenario_data/{rs}.csv\")\n",
     "    _df[\"North\"] = _df[[north_country]]\n",
     "    _df[\"West\"] = _df[[west_country]]\n",
     "    _df[\"East\"] = _df[[east_country]]\n",
     "\n",
     "    drop_cols = set(north+east+west).intersection(_df.columns)\n",
     "    _df = _df.drop(columns=drop_cols)\n",
-    "    _df.to_csv(f\"copula_testing/scenario_data_agg/{rs}.csv\")"
+    "    _df.to_csv(f\"CopulaTesting/scenario_data_agg/{rs}.csv\")"
    ]
   }
  ],
